deployment/yaml/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: librarye-ns
  labels:
    app: library-application
