deployment/yaml/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: libraryweb
  namespace: library-ns
  labels:
    app: library-application
    subname: libraryweb
spec:
  selector:
    matchLabels:
      app: library-application
      subname: libraryweb
  replicas: 1
  template:
    metadata:
      labels:
        app: library-application
        subname: libraryweb
    spec:
      containers:
        - name: container-libraryweb
          image: image-registry.openshift-image-registry.svc:5000/library-ns/libraryweb:latest
          
          imagePullPolicy: Always
          ports:
            - name: 8080-tcp
              containerPort: 8080
