deployment/yaml/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: libraryweb
  namespace: library-ns
  labels:
    app: library-application
    subname: libraryweb
spec:
  type: ClusterIP
  ports:
    - name: 8080-tcp
      port: 8080
      targetPort: 8080
  selector:
    app: library-application
    subname: libraryweb
