deployment/yaml/04-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: libraryweb
  namespace: library-ns
  labels:
    app: library-application
    subname: libraryweb
spec:
  path: /
  to:
    kind: Service
    name: libraryweb
    weight: 100
  port:
    targetPort: 8080
